--- a/argocd_apps/strimzi.yml
+++ b/argocd_apps/strimzi.yml
@@ -23,3 +23,4 @@ spec:
     helm:
       valuesObject:
         # https://artifacthub.io/packages/helm/strimzi-kafka-operator/strimzi-kafka-operator?modal=values
+        watchAnyNamespace: true
