feat(kafka): Add LB listener

--- a/argocd_apps/kafka/templates/kafka.yml
+++ b/argocd_apps/kafka/templates/kafka.yml
@@ -22,13 +22,16 @@ spec:
         port: 9094
         type: nodeport
         tls: false
+      - name: external
+        port: 9096
+        type: loadbalancer
+        tls: false
     config:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 3
       default.replication.factor: 3
       min.insync.replicas: 3
-      inter.broker.protocol.version: "3.3"
     storage:
       type: jbod
       volumes:
